syntax = "proto3";

package io.spinnaker.proto.stats;

option go_package = "github.com/spinnaker/kork/kork-proto/proto/stats";

option java_package = "com.netflix.spinnaker.kork.proto.stats";
option java_multiple_files = true;

message Event {
  SpinnakerInstance spinnaker_instance = 1;
  Application application = 2;
  Execution execution = 3;
}

message SpinnakerInstance {
  string id = 1;
  string version = 2;
  DeploymentMethod deploymentMethod = 3;
}

message DeploymentMethod {
  Type type = 1;
  string version = 2;

  enum Type {
    NONE = 0;
    OTHER = 1;
    HALYARD = 2;
    KUBERNETES_OPERATOR = 3;
    KLEAT = 4;
  }
}

message Application {
  string id = 1;
}

message Execution {
  string id = 1;
  Type type = 2;

  enum Type {
    UNKNOWN = 0;
    PIPELINE = 1;
    ORCHESTRATION = 2;
    MANAGED_PIPELINE_TEMPLATE_V1 = 3;
    MANAGED_PIPELINE_TEMPLATE_V2 = 4;
  }

  Trigger trigger = 3;

  message Trigger {
    Type type = 1;

    // Sourced from https://github.com/spinnaker/echo/tree/master/echo-model/src/main/java/com/netflix/spinnaker/echo/model/trigger
    enum Type {
      UNKNOWN = 0;
      ARTIFACTORY = 1;
      BUILD = 2;
      DOCKER = 3;
      GIT = 4;
      MANUAL = 5;
      PUBSUB = 6;
      WEBHOOK = 7;
    }
  }

  repeated Stage stages = 4;
  Status status = 5;
}

message Stage {
  string type =  1;
  Status status = 2;
  CloudProvider cloud_provider = 3;
}

message CloudProvider {
  ID id = 1;
  string variant = 2;

  enum ID {
    UNKNOWN = 0;
    APPENGINE = 1;
    AWS = 2;
    AZURE = 3;
    CLOUDFOUNDRY = 4;
    DCOS = 5;
    ECS = 6;
    GCE = 7;
    KUBERNETES = 8;
    ORACLE = 9;
  }
}

// Sourced from https://github.com/spinnaker/orca/blob/master/orca-core/src/main/java/com/netflix/spinnaker/orca/ExecutionStatus.java
enum Status {
  UNKNOWN = 0;
  NOT_STARTED = 1;
  RUNNING = 2;
  PAUSED = 3;
  SUSPENDED = 4;
  SUCCEEDED = 5;
  FAILED_CONTINUE = 6;
  TERMINAL = 7;
  CANCELED = 8;
  REDIRECT = 9;
  STOPPED = 10;
  SKIPPED = 11;
  BUFFERED = 12;
}
